terraform/k8smanifest_tf_prod/react-prod-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: frontend
  name: emp-react-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/inbound-cidrs: 10.132.24.0/21, 172.32.0.0/16, 10.132.24.124/32
    alb.ingress.kubernetes.io/healthcheck-port: '88'
    alb.ingress.kubernetes.io/group.name: emp-app-prod-group

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: emp-react
              port:
                number: 80
